Change publicPath for deeplink